added 3 dimensional tensor

--- a/00-fundamentals.ipynb
+++ b/00-fundamentals.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c108c672",
+   "id": "1310ce54",
    "metadata": {},
    "source": [
     "## 00. PyTorch Fundamentals"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "e3287751",
+   "id": "4531ffd0",
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0061e07",
+   "id": "cf9b3e2f",
    "metadata": {},
    "source": [
     "## Introduction to Tensors\n",
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "a8224363",
+   "id": "c11cf77d",
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "f93d71ef",
+   "id": "8c70d315",
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "2786b256",
+   "id": "b2991c0e",
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "282b1207",
+   "id": "92aeb3f2",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "9635fca4",
+   "id": "06963acc",
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "16df3670",
+   "id": "9a67d1ea",
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "99e4ecba",
+   "id": "7f2af671",
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "758637bc",
+   "id": "f8d55017",
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "2a68374b",
+   "id": "69efdb33",
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "38c64ffb",
+   "id": "4c74fde9",
    "metadata": {},
    "outputs": [
     {
@@ -261,8 +261,125 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 23,
+   "id": "aa12215c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[ 1,  2,  3],\n",
+       "         [ 4,  5,  6],\n",
+       "         [ 7,  8,  9]],\n",
+       "\n",
+       "        [[10, 11, 12],\n",
+       "         [13, 14, 15],\n",
+       "         [16, 17, 18]]])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# TENSOR\n",
+    "TENSOR = torch.tensor([[[1,2,3],[4,5,6],[7,8,9]],\n",
+    "                       [[10,11,12],[13,14,15],[16,17,18]]\n",
+    "                      ])\n",
+    "TENSOR"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "f8db320b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "TENSOR.ndim"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "0f610292",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1, 2, 3],\n",
+       "        [4, 5, 6],\n",
+       "        [7, 8, 9]])"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "TENSOR[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "5d0cc021",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([4, 5, 6])"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "TENSOR[0][1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "06c5f2d0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([2, 3, 3])"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "TENSOR.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "b1a765f4",
+   "id": "52e7691e",
    "metadata": {},
    "outputs": [],
    "source": []
