--- a/00-fundamentals.ipynb
+++ b/00-fundamentals.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "fe91c797",
+   "id": "5d440eee",
    "metadata": {},
    "source": [
     "## 00. PyTorch Fundamentals"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "b5b4279b",
+   "id": "e494d410",
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a6414bb",
+   "id": "8a4e33a0",
    "metadata": {},
    "source": [
     "## Introduction to Tensors\n",
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "e146100c",
+   "id": "70f30c3c",
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "e017bbd2",
+   "id": "2b5a6d2d",
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "d0d1a121",
+   "id": "dfa58346",
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "48bd7217",
+   "id": "4adcc06f",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "7a1aedd1",
+   "id": "fbc23f1b",
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "a0cc68eb",
+   "id": "3c0b12b3",
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "2635e618",
+   "id": "b51a6e2d",
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "65f426fc",
+   "id": "f14fb4ad",
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "f6bec6e6",
+   "id": "938cb40f",
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "eab004d3",
+   "id": "3bbc3779",
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "d8c22c5a",
+   "id": "cfe605fb",
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "6e333bc4",
+   "id": "566e795d",
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +314,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "e59ad731",
+   "id": "bcdd6000",
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +337,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "d094e3d5",
+   "id": "4d777326",
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +358,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "2ee0adfe",
+   "id": "b4844c2a",
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70e12b17",
+   "id": "513afff8",
    "metadata": {},
    "source": [
     "### Random Tensors\n",
@@ -391,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "f616851d",
+   "id": "9e44f54d",
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +416,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "349df010",
+   "id": "63d72b0c",
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +437,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "2c2f3b5a",
+   "id": "8deb06f3",
    "metadata": {},
    "outputs": [
     {
@@ -458,7 +458,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "7daf7218",
+   "id": "bc8e6955",
    "metadata": {},
    "outputs": [
     {
@@ -479,9 +479,130 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "366a994d",
+   "metadata": {},
+   "source": [
+    "### Zeros and Ones"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "0bccf2fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0., 0., 0., 0.],\n",
+       "        [0., 0., 0., 0.],\n",
+       "        [0., 0., 0., 0.]])"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create a tensor of all zeros\n",
+    "zeros = torch.zeros(size = (3,4))\n",
+    "zeros"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "a450dc07",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1., 1., 1., 1.],\n",
+       "        [1., 1., 1., 1.],\n",
+       "        [1., 1., 1., 1.]])"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create a tensor of all ones\n",
+    "ones = torch.ones(size = (3,4))\n",
+    "ones"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "902f19cc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.float32"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ones.dtype"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b18ea88d",
+   "metadata": {},
+   "source": [
+    "### Range of tensors and tensors-like"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "d374a865",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([  0,  99, 198, 297, 396, 495, 594, 693, 792, 891, 990])"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Creating a range of tensors\n",
+    "range_of_tensors_with_step = torch.arange(start=0,end=1000,step=99)\n",
+    "range_of_tensors_with_step"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8eece4af",
+   "id": "4721eb71",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Creating tensors like\n",
+    "ten_zeros = torch.zeros"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "38adb2cc",
    "metadata": {},
    "outputs": [],
    "source": []
