--- a/00-fundamentals.ipynb
+++ b/00-fundamentals.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5d440eee",
+   "id": "933941d2",
    "metadata": {},
    "source": [
     "## 00. PyTorch Fundamentals"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "e494d410",
+   "id": "5ef01ad2",
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a4e33a0",
+   "id": "03ab82db",
    "metadata": {},
    "source": [
     "## Introduction to Tensors\n",
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "70f30c3c",
+   "id": "08461b62",
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "2b5a6d2d",
+   "id": "1e7b0a99",
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "dfa58346",
+   "id": "fc320fa3",
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "4adcc06f",
+   "id": "f43810b8",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "fbc23f1b",
+   "id": "3fbc69c4",
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "3c0b12b3",
+   "id": "6a4886b5",
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "b51a6e2d",
+   "id": "e026765e",
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "f14fb4ad",
+   "id": "a3a9b170",
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "938cb40f",
+   "id": "c996fdf1",
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "3bbc3779",
+   "id": "d026245f",
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "cfe605fb",
+   "id": "6818f4b4",
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "566e795d",
+   "id": "5d5cfd8a",
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +314,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "bcdd6000",
+   "id": "41b88c32",
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +337,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "4d777326",
+   "id": "3526162f",
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +358,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "b4844c2a",
+   "id": "5a517404",
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "513afff8",
+   "id": "33328d8a",
    "metadata": {},
    "source": [
     "### Random Tensors\n",
@@ -391,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "9e44f54d",
+   "id": "cd42118b",
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +416,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "63d72b0c",
+   "id": "762d2ea2",
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +437,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "8deb06f3",
+   "id": "985bd381",
    "metadata": {},
    "outputs": [
     {
@@ -458,7 +458,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "bc8e6955",
+   "id": "17c3c860",
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "366a994d",
+   "id": "8f2da334",
    "metadata": {},
    "source": [
     "### Zeros and Ones"
@@ -489,7 +489,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "0bccf2fa",
+   "id": "190449a0",
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +514,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "a450dc07",
+   "id": "2236def9",
    "metadata": {},
    "outputs": [
     {
@@ -539,7 +539,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "902f19cc",
+   "id": "63e9d3aa",
    "metadata": {},
    "outputs": [
     {
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b18ea88d",
+   "id": "dc298b8f",
    "metadata": {},
    "source": [
     "### Range of tensors and tensors-like"
@@ -568,7 +568,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "d374a865",
+   "id": "4d16ab68",
    "metadata": {},
    "outputs": [
     {
@@ -590,19 +590,119 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4721eb71",
+   "execution_count": 46,
+   "id": "a879254f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0])"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Creating tensors like\n",
+    "ten_zeros = torch.zeros_like(input = range_of_tensors_with_step)\n",
+    "ten_zeros"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e3510d85",
+   "metadata": {},
+   "source": [
+    "### Tensor datatypes\n",
+    "**Note:** Tensor datatypes is one of the 3 big errors we run into in Pytorch and deep learning.\n",
+    "\n",
+    "Others are tensor not in right shape, and tensor not on right device."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "34fb34df",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([3.0000, 4.5000, 5.0000])"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "float_32_tensor = torch.tensor([3.0,4.5,5.0], \n",
+    "                               dtype = None, \n",
+    "                               device = None, \n",
+    "                               requires_grad = False)\n",
+    "float_32_tensor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "5787ab48",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.float32"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "float_32_tensor.dtype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "f2f4d613",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Creating tensors like\n",
-    "ten_zeros = torch.zeros"
+    "float_16_tensor = float_32_tensor.type(torch.float16)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "e037dc1d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.float16"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "float_16_tensor.dtype"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38adb2cc",
+   "id": "e49e5bfd",
    "metadata": {},
    "outputs": [],
    "source": []
