--- a/00-fundamentals.ipynb
+++ b/00-fundamentals.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "933941d2",
+   "id": "90f91c9d",
    "metadata": {},
    "source": [
     "## 00. PyTorch Fundamentals"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "5ef01ad2",
+   "id": "38e66e75",
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03ab82db",
+   "id": "fe753e1b",
    "metadata": {},
    "source": [
     "## Introduction to Tensors\n",
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "08461b62",
+   "id": "e35dc8d6",
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "1e7b0a99",
+   "id": "e164a6a9",
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "fc320fa3",
+   "id": "705e7157",
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "f43810b8",
+   "id": "8076031e",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "3fbc69c4",
+   "id": "cd4227f6",
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "6a4886b5",
+   "id": "223d764b",
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "e026765e",
+   "id": "0f997f59",
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "a3a9b170",
+   "id": "f1720b79",
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "c996fdf1",
+   "id": "19e73834",
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "d026245f",
+   "id": "705283b9",
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "6818f4b4",
+   "id": "d5e5135b",
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "5d5cfd8a",
+   "id": "15b25aa5",
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +314,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "41b88c32",
+   "id": "ee19d48b",
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +337,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "3526162f",
+   "id": "755f334e",
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +358,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "5a517404",
+   "id": "ca1308f3",
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33328d8a",
+   "id": "abe0343c",
    "metadata": {},
    "source": [
     "### Random Tensors\n",
@@ -391,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "cd42118b",
+   "id": "ab28fa66",
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +416,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "762d2ea2",
+   "id": "eeae0d7f",
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +437,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "985bd381",
+   "id": "b861a385",
    "metadata": {},
    "outputs": [
     {
@@ -458,7 +458,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "17c3c860",
+   "id": "dd4e37f8",
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f2da334",
+   "id": "df276e17",
    "metadata": {},
    "source": [
     "### Zeros and Ones"
@@ -489,7 +489,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "190449a0",
+   "id": "46ab63fc",
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +514,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "2236def9",
+   "id": "3eac426d",
    "metadata": {},
    "outputs": [
     {
@@ -539,7 +539,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "63e9d3aa",
+   "id": "d18d9ed3",
    "metadata": {},
    "outputs": [
     {
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc298b8f",
+   "id": "92e8e44c",
    "metadata": {},
    "source": [
     "### Range of tensors and tensors-like"
@@ -568,7 +568,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "4d16ab68",
+   "id": "94054e17",
    "metadata": {},
    "outputs": [
     {
@@ -591,7 +591,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "a879254f",
+   "id": "d23023b8",
    "metadata": {},
    "outputs": [
     {
@@ -613,7 +613,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3510d85",
+   "id": "3ba4e6ca",
    "metadata": {},
    "source": [
     "### Tensor datatypes\n",
@@ -625,7 +625,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "34fb34df",
+   "id": "803a138c",
    "metadata": {},
    "outputs": [
     {
@@ -650,7 +650,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "5787ab48",
+   "id": "22f653fe",
    "metadata": {},
    "outputs": [
     {
@@ -670,8 +670,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "id": "f2f4d613",
+   "execution_count": 58,
+   "id": "8c97d4fd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -680,8 +680,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "id": "e037dc1d",
+   "execution_count": 59,
+   "id": "7fae7bb4",
    "metadata": {},
    "outputs": [
     {
@@ -690,7 +690,7 @@
        "torch.float16"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -700,9 +700,70 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6f52e846",
+   "metadata": {},
+   "source": [
+    "### Getting information from tensors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "a4d0273f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.9009, 0.9050, 0.3982, 0.7461],\n",
+       "        [0.6895, 0.6288, 0.7548, 0.6423],\n",
+       "        [0.4109, 0.9815, 0.4476, 0.9668]])"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rand_tensor = torch.rand(3,4)\n",
+    "rand_tensor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "1a61e4cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0.9009, 0.9050, 0.3982, 0.7461],\n",
+      "        [0.6895, 0.6288, 0.7548, 0.6423],\n",
+      "        [0.4109, 0.9815, 0.4476, 0.9668]])\n",
+      "Datatype: {rand_tensor.dtype}\n",
+      "torch.Size([3, 4])\n",
+      "torch.Size([3, 4])\n",
+      "cpu\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Find out details of the tensor\n",
+    "print(rand_tensor)\n",
+    "print(\"Datatype: {rand_tensor.dtype}\")\n",
+    "print(rand_tensor.shape)\n",
+    "print(rand_tensor.size())\n",
+    "print(rand_tensor.device)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e49e5bfd",
+   "id": "48719447",
    "metadata": {},
    "outputs": [],
    "source": []
