--- a/00-fundamentals.ipynb
+++ b/00-fundamentals.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "90f91c9d",
+   "id": "0b75c839",
    "metadata": {},
    "source": [
     "## 00. PyTorch Fundamentals"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "38e66e75",
+   "id": "9d39bb48",
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe753e1b",
+   "id": "e1e6be1a",
    "metadata": {},
    "source": [
     "## Introduction to Tensors\n",
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "e35dc8d6",
+   "id": "c4942a35",
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "e164a6a9",
+   "id": "57a754d1",
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "705e7157",
+   "id": "822cd81f",
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "8076031e",
+   "id": "fac2d0cd",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "cd4227f6",
+   "id": "d5b5be04",
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "223d764b",
+   "id": "89138541",
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "0f997f59",
+   "id": "a33e7324",
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "f1720b79",
+   "id": "8a1224dc",
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "19e73834",
+   "id": "357437bb",
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "705283b9",
+   "id": "fa7d00e0",
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "d5e5135b",
+   "id": "5ded810f",
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "15b25aa5",
+   "id": "345de399",
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +314,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "ee19d48b",
+   "id": "75c1839f",
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +337,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "755f334e",
+   "id": "deff3368",
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +358,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "ca1308f3",
+   "id": "9c9327f8",
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "abe0343c",
+   "id": "eeaaa74b",
    "metadata": {},
    "source": [
     "### Random Tensors\n",
@@ -391,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "ab28fa66",
+   "id": "f60472b5",
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +416,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "eeae0d7f",
+   "id": "69f1cd8f",
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +437,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "b861a385",
+   "id": "53b5b966",
    "metadata": {},
    "outputs": [
     {
@@ -458,7 +458,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "dd4e37f8",
+   "id": "47368f24",
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df276e17",
+   "id": "61b874e4",
    "metadata": {},
    "source": [
     "### Zeros and Ones"
@@ -489,7 +489,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "46ab63fc",
+   "id": "06fd56ae",
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +514,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "3eac426d",
+   "id": "3d711cfa",
    "metadata": {},
    "outputs": [
     {
@@ -539,7 +539,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "d18d9ed3",
+   "id": "1865df0c",
    "metadata": {},
    "outputs": [
     {
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92e8e44c",
+   "id": "cf330606",
    "metadata": {},
    "source": [
     "### Range of tensors and tensors-like"
@@ -568,7 +568,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "94054e17",
+   "id": "5738fddc",
    "metadata": {},
    "outputs": [
     {
@@ -591,7 +591,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "d23023b8",
+   "id": "e8d4d6f8",
    "metadata": {},
    "outputs": [
     {
@@ -613,7 +613,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ba4e6ca",
+   "id": "f1700407",
    "metadata": {},
    "source": [
     "### Tensor datatypes\n",
@@ -625,7 +625,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "803a138c",
+   "id": "95eada61",
    "metadata": {},
    "outputs": [
     {
@@ -650,7 +650,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "22f653fe",
+   "id": "ddcef50b",
    "metadata": {},
    "outputs": [
     {
@@ -671,7 +671,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "8c97d4fd",
+   "id": "5b5ca315",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -681,7 +681,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "7fae7bb4",
+   "id": "85db48e8",
    "metadata": {},
    "outputs": [
     {
@@ -701,7 +701,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f52e846",
+   "id": "ccf4eee4",
    "metadata": {},
    "source": [
     "### Getting information from tensors"
@@ -710,7 +710,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "a4d0273f",
+   "id": "b5a06168",
    "metadata": {},
    "outputs": [
     {
@@ -733,8 +733,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
-   "id": "1a61e4cf",
+   "execution_count": 68,
+   "id": "50e523fd",
    "metadata": {},
    "outputs": [
     {
@@ -744,26 +744,107 @@
       "tensor([[0.9009, 0.9050, 0.3982, 0.7461],\n",
       "        [0.6895, 0.6288, 0.7548, 0.6423],\n",
       "        [0.4109, 0.9815, 0.4476, 0.9668]])\n",
-      "Datatype: {rand_tensor.dtype}\n",
-      "torch.Size([3, 4])\n",
-      "torch.Size([3, 4])\n",
-      "cpu\n"
+      "Datatype: torch.float32\n",
+      "Shape(its an attribute): torch.Size([3, 4])\n",
+      "Size(its a function): torch.Size([3, 4])\n",
+      "Device: cpu\n"
      ]
     }
    ],
    "source": [
     "# Find out details of the tensor\n",
     "print(rand_tensor)\n",
-    "print(\"Datatype: {rand_tensor.dtype}\")\n",
-    "print(rand_tensor.shape)\n",
-    "print(rand_tensor.size())\n",
-    "print(rand_tensor.device)"
+    "print(f\"Datatype: {rand_tensor.dtype}\")\n",
+    "print(f\"Shape(its an attribute): {rand_tensor.shape}\")\n",
+    "print(f\"Size(its a function): {rand_tensor.size()}\")\n",
+    "print(f\"Device: {rand_tensor.device}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f3547432",
+   "metadata": {},
+   "source": [
+    "### Manipulating tensors (tensor operations)\n",
+    "\n",
+    "* Addition\n",
+    "* Subtraction\n",
+    "* Multiplication\n",
+    "* Division\n",
+    "* Matrix Multiplication"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "5e522e1f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([2, 3, 4])"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Addition torch.add(tensor,1)\n",
+    "tensor = torch.tensor([1,2,3])\n",
+    "tensor+1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "5dc616e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([10, 20, 30])"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Multiplication torch.mul(tensor,10)\n",
+    "tensor*10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "f0cd7800",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0, 1, 2])"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Subtracton torch.subtract(tensor,1)\n",
+    "tensor-1"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48719447",
+   "id": "d1ab531a",
    "metadata": {},
    "outputs": [],
    "source": []
