--- a/00-fundamentals.ipynb
+++ b/00-fundamentals.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0b75c839",
+   "id": "647ac211",
    "metadata": {},
    "source": [
     "## 00. PyTorch Fundamentals"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "9d39bb48",
+   "id": "f8807eda",
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1e6be1a",
+   "id": "1cd18421",
    "metadata": {},
    "source": [
     "## Introduction to Tensors\n",
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "c4942a35",
+   "id": "32ebc23b",
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "57a754d1",
+   "id": "36495195",
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "822cd81f",
+   "id": "46de7c8a",
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "fac2d0cd",
+   "id": "33bcb3b5",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "d5b5be04",
+   "id": "49d9cbf9",
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "89138541",
+   "id": "982e4aec",
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "a33e7324",
+   "id": "341092fb",
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "8a1224dc",
+   "id": "cb8a9724",
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "357437bb",
+   "id": "7554f470",
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "fa7d00e0",
+   "id": "04bac3f4",
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "5ded810f",
+   "id": "e692e110",
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "345de399",
+   "id": "804d5bb5",
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +314,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "75c1839f",
+   "id": "83ab8dcd",
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +337,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "deff3368",
+   "id": "95517041",
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +358,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "9c9327f8",
+   "id": "26537509",
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eeaaa74b",
+   "id": "54938550",
    "metadata": {},
    "source": [
     "### Random Tensors\n",
@@ -391,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "f60472b5",
+   "id": "7c396b42",
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +416,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "69f1cd8f",
+   "id": "a1e196d4",
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +437,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "53b5b966",
+   "id": "790156cd",
    "metadata": {},
    "outputs": [
     {
@@ -458,7 +458,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "47368f24",
+   "id": "588b806a",
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61b874e4",
+   "id": "d898a683",
    "metadata": {},
    "source": [
     "### Zeros and Ones"
@@ -489,7 +489,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "06fd56ae",
+   "id": "9fae8a83",
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +514,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "3d711cfa",
+   "id": "a51d4ac0",
    "metadata": {},
    "outputs": [
     {
@@ -539,7 +539,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "1865df0c",
+   "id": "1412f20c",
    "metadata": {},
    "outputs": [
     {
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf330606",
+   "id": "cc4bf750",
    "metadata": {},
    "source": [
     "### Range of tensors and tensors-like"
@@ -568,7 +568,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "5738fddc",
+   "id": "4421c8c8",
    "metadata": {},
    "outputs": [
     {
@@ -591,7 +591,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "e8d4d6f8",
+   "id": "c7595d41",
    "metadata": {},
    "outputs": [
     {
@@ -613,7 +613,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1700407",
+   "id": "c3c97edc",
    "metadata": {},
    "source": [
     "### Tensor datatypes\n",
@@ -625,7 +625,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "95eada61",
+   "id": "dab84619",
    "metadata": {},
    "outputs": [
     {
@@ -650,7 +650,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "ddcef50b",
+   "id": "ddc46431",
    "metadata": {},
    "outputs": [
     {
@@ -671,7 +671,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "5b5ca315",
+   "id": "a4f02ca9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -681,7 +681,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "85db48e8",
+   "id": "fdcb7c28",
    "metadata": {},
    "outputs": [
     {
@@ -701,7 +701,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ccf4eee4",
+   "id": "7565c0da",
    "metadata": {},
    "source": [
     "### Getting information from tensors"
@@ -710,7 +710,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "b5a06168",
+   "id": "60b7199c",
    "metadata": {},
    "outputs": [
     {
@@ -734,7 +734,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "50e523fd",
+   "id": "14f2210b",
    "metadata": {},
    "outputs": [
     {
@@ -762,7 +762,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3547432",
+   "id": "c63e6b3e",
    "metadata": {},
    "source": [
     "### Manipulating tensors (tensor operations)\n",
@@ -777,7 +777,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "5e522e1f",
+   "id": "3482c3c4",
    "metadata": {},
    "outputs": [
     {
@@ -800,7 +800,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "5dc616e4",
+   "id": "1f4f0b05",
    "metadata": {},
    "outputs": [
     {
@@ -822,7 +822,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "f0cd7800",
+   "id": "142a9243",
    "metadata": {},
    "outputs": [
     {
@@ -843,8 +843,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 73,
+   "id": "a6103192",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0.5000, 1.0000, 1.5000])"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tensor/2"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "d1ab531a",
+   "id": "3b2bdad5",
    "metadata": {},
    "outputs": [],
    "source": []
