Finding position of min and max using argmin() or argmax()

--- a/00-fundamentals.ipynb
+++ b/00-fundamentals.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "26bfebf6",
+   "id": "e66ded2c",
    "metadata": {},
    "source": [
     "## 00. PyTorch Fundamentals"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "648d84ae",
+   "id": "f7ac0108",
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3da3e1f",
+   "id": "d094f6d9",
    "metadata": {},
    "source": [
     "## Introduction to Tensors\n",
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "f28b6425",
+   "id": "7340de76",
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "bcbe22fa",
+   "id": "e87290bf",
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "bf2979ff",
+   "id": "4f129289",
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "5a706905",
+   "id": "695fbcb4",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "5d50cdbe",
+   "id": "f38ac223",
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "6c2966ca",
+   "id": "aa2d49e2",
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "bd8f4785",
+   "id": "e5254c0e",
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "990540d3",
+   "id": "e3bef39f",
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "97b530c1",
+   "id": "4b4a5f7c",
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "cec5bb41",
+   "id": "0f788648",
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "98a476e9",
+   "id": "e0086e29",
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "538dc677",
+   "id": "240022f2",
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +314,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "33b8fd76",
+   "id": "d2f42a71",
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +337,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "5e9a0a45",
+   "id": "45261ecc",
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +358,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "76cf67b1",
+   "id": "24cd1971",
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "63bfceb5",
+   "id": "4b313a8a",
    "metadata": {},
    "source": [
     "### Random Tensors\n",
@@ -391,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "1fdfbb57",
+   "id": "13fce381",
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +416,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "a70a8f96",
+   "id": "866a2656",
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +437,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "389cc7ad",
+   "id": "9b3bf71b",
    "metadata": {},
    "outputs": [
     {
@@ -458,7 +458,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "e749a6b3",
+   "id": "c2bc68ef",
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1bc1949",
+   "id": "0bce807d",
    "metadata": {},
    "source": [
     "### Zeros and Ones"
@@ -489,7 +489,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "90fdacfb",
+   "id": "ac7b4709",
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +514,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "b6b16d04",
+   "id": "69842717",
    "metadata": {},
    "outputs": [
     {
@@ -539,7 +539,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "47b348a7",
+   "id": "fdec98ba",
    "metadata": {},
    "outputs": [
     {
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce0af116",
+   "id": "43315ce2",
    "metadata": {},
    "source": [
     "### Range of tensors and tensors-like"
@@ -568,7 +568,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "3d7ad8e6",
+   "id": "302cfd28",
    "metadata": {},
    "outputs": [
     {
@@ -591,7 +591,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "39ee79e9",
+   "id": "7be8ac57",
    "metadata": {},
    "outputs": [
     {
@@ -613,7 +613,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "139c0bcf",
+   "id": "8686cce5",
    "metadata": {},
    "source": [
     "### Tensor datatypes\n",
@@ -625,7 +625,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "09e43953",
+   "id": "2dcddaa9",
    "metadata": {},
    "outputs": [
     {
@@ -650,7 +650,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "df5b960f",
+   "id": "7f90c99e",
    "metadata": {},
    "outputs": [
     {
@@ -671,7 +671,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "06ca441c",
+   "id": "004ca389",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -681,7 +681,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "c1fe887e",
+   "id": "074414f4",
    "metadata": {},
    "outputs": [
     {
@@ -701,7 +701,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92ea150f",
+   "id": "ab1f66f9",
    "metadata": {},
    "source": [
     "### Getting information from tensors"
@@ -710,7 +710,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "295e367d",
+   "id": "e3793d03",
    "metadata": {},
    "outputs": [
     {
@@ -734,7 +734,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "f1b43601",
+   "id": "d31266c4",
    "metadata": {},
    "outputs": [
     {
@@ -762,7 +762,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b64bf0dd",
+   "id": "df7874de",
    "metadata": {},
    "source": [
     "### Manipulating tensors (tensor operations)\n",
@@ -777,7 +777,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "037d3f57",
+   "id": "6adcd7c4",
    "metadata": {},
    "outputs": [
     {
@@ -800,7 +800,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "502a0a51",
+   "id": "d38c999c",
    "metadata": {},
    "outputs": [
     {
@@ -822,7 +822,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "47d3b271",
+   "id": "33327876",
    "metadata": {},
    "outputs": [
     {
@@ -844,7 +844,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "20bb6bce",
+   "id": "2bebe90e",
    "metadata": {},
    "outputs": [
     {
@@ -865,7 +865,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "04a0dd2c",
+   "id": "d93f17c0",
    "metadata": {},
    "outputs": [
     {
@@ -887,7 +887,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "92f05115",
+   "id": "664f6771",
    "metadata": {},
    "outputs": [
     {
@@ -908,7 +908,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3dcce1c2",
+   "id": "d5728b53",
    "metadata": {},
    "source": [
     "This does not work as inner dimension does not match, while in the one below the inner dimension matches"
@@ -917,7 +917,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "0f26d82b",
+   "id": "444caad1",
    "metadata": {},
    "outputs": [
     {
@@ -939,7 +939,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05507c6e",
+   "id": "2666ae5f",
    "metadata": {},
    "source": [
     "To fix our tensor shape issues, we can manipulate the shape of our tensors using a transpose.\n",
@@ -952,7 +952,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "e57d410e",
+   "id": "b0f9dcc8",
    "metadata": {},
    "outputs": [
     {
@@ -975,7 +975,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "a36d3165",
+   "id": "4ad664eb",
    "metadata": {},
    "outputs": [
     {
@@ -1002,7 +1002,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e52450e",
+   "id": "64ddde62",
    "metadata": {},
    "source": [
     "### Tensor Aggregation (Min, Max, Mean, Sum)"
@@ -1011,7 +1011,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "ae1c5c01",
+   "id": "6cd1ddf9",
    "metadata": {},
    "outputs": [
     {
@@ -1034,7 +1034,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "985d0d64",
+   "id": "c44dddf3",
    "metadata": {},
    "outputs": [
     {
@@ -1056,7 +1056,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "46c3bf5a",
+   "id": "e7dcf8a7",
    "metadata": {},
    "outputs": [
     {
@@ -1078,7 +1078,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "ebbb1c25",
+   "id": "fbf4e9bc",
    "metadata": {},
    "outputs": [
     {
@@ -1099,8 +1099,82 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 103,
+   "id": "e10b2038",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor(450., dtype=torch.float16), tensor(450., dtype=torch.float16))"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Find the sum\n",
+    "torch.sum(x), x.sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c2a55344",
+   "metadata": {},
+   "source": [
+    "### Finding the positional min and max"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "id": "6e6ab66a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor(0), tensor(0., dtype=torch.float16))"
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Find the index where minimum value occurs using argmin()\n",
+    "x.argmin(), x[x.argmin()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "id": "d9267475",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor(9), tensor(90., dtype=torch.float16))"
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Find the index where minimum value occurs using argmax()\n",
+    "x.argmax(), x[x.argmax()]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "b2236c3f",
+   "id": "e96180ee",
    "metadata": {},
    "outputs": [],
    "source": []
