Conversion from numpy array to tensor and vicevers

--- a/00-fundamentals.ipynb
+++ b/00-fundamentals.ipynb
@@ -1406,7 +1406,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "a07829a2",
+   "id": "dc35a2aa",
    "metadata": {},
    "outputs": [
     {
@@ -1437,7 +1437,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "2468963d",
+   "id": "3146e49e",
    "metadata": {},
    "outputs": [
     {
@@ -1459,7 +1459,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c2772926",
+   "id": "107f417f",
    "metadata": {},
    "source": [
     "### Indexing(selecting data from tensors)"
@@ -1468,7 +1468,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "17a7f131",
+   "id": "4280cb9f",
    "metadata": {},
    "outputs": [
     {
@@ -1493,7 +1493,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "830eebc3",
+   "id": "9b3ace6e",
    "metadata": {},
    "outputs": [
     {
@@ -1517,7 +1517,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "9ea7367f",
+   "id": "52d30072",
    "metadata": {},
    "outputs": [
     {
@@ -1538,7 +1538,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "39b9ab85",
+   "id": "127af378",
    "metadata": {},
    "outputs": [
     {
@@ -1559,7 +1559,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "fc7f11ba",
+   "id": "47581f38",
    "metadata": {},
    "outputs": [
     {
@@ -1581,7 +1581,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "c3292128",
+   "id": "99cf9285",
    "metadata": {},
    "outputs": [
     {
@@ -1603,7 +1603,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "276e99d7",
+   "id": "cafe5eb2",
    "metadata": {},
    "outputs": [
     {
@@ -1625,7 +1625,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "841561e2",
+   "id": "109f8558",
    "metadata": {},
    "outputs": [
     {
@@ -1647,7 +1647,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "dff4a0fd",
+   "id": "5ebdab7d",
    "metadata": {},
    "outputs": [
     {
@@ -1668,11 +1668,96 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 70,
+   "id": "a68b4b9a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([3, 6, 9])"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Index on x to return 3,6,9\n",
+    "x[0,:,2]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8b4cbe7c",
+   "metadata": {},
+   "source": [
+    "## Pytorch tensors and numpy\n",
+    "\n",
+    "Pytorch has to interact with Numpy and viceversa\n",
+    "\n",
+    "* Data in Numpy, want in PyTorch Tensor -> torch.from_numpy(ndarray)\n",
+    "* PyTorch tensor -> NumPy ->torch.Tensor.numpy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "7ced7b3d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([1., 2., 3., 4., 5., 6., 7.]),\n",
+       " tensor([1., 2., 3., 4., 5., 6., 7.], dtype=torch.float64))"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# NumPy array to tensor\n",
+    "array = np.arange(1.0, 8.0)\n",
+    "tensor = torch.from_numpy(array) # warning from converting from numpy to tensor dtype is float64\n",
+    "array, tensor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "bb6a537c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(dtype('float64'), torch.float64)"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "array.dtype, tensor.dtype"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "e27c2cdd",
+   "id": "380ecf72",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Tensor to NumPy array\n",
+    "tensor = torch.ones(7)\n",
+    "numpy_tensor = tensor.nu"
+   ]
   }
  ],
  "metadata": {
